[package]
name = "solana-gov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.7"
spl-governance = {version = "4.0.0", features = ["no-entrypoint"]}
spl-governance-tools = "0.1.4"
spl-token = "4.0.1"

[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]
